examples/test/testpolicy6852.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6852
  namespace: namespace224
spec:
  podSelector:
    matchLabels:
      key15: value43
      key22: value13
      key44: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value29
          key24: value9
      podSelector:
        matchLabels:
          key45: value26
          key13: value26
          key10: value2
